1.修改打包方式